ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Contact_Fields_Map__c/CnP_PaaS__Contact_Fields_Map__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Contact Fields Map</label>
    <nameField>
        <label>Contact Fields Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P Contact Fields Map</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>