ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Contact_Fields_Map__c/fields/CnP_PaaS__Account_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Account_Field_Type__c</fullName>
    <label>Account Field Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>