ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Contact_Fields_Map__c/fields/CnP_PaaS__Field_Map_Values__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Field_Map_Values__c</fullName>
    <label>Field Map Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>