ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Contact_Fields_Map__c/fields/CnP_PaaS__Process_Type__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Process_Type__c</fullName>
    <label>Process Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>